bugfix horizontal scrolling

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
 }
 
 .header_colored{
@@ -66,7 +67,7 @@
 }
 
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 338px){
     .header{
         padding: 0 14px;
     }
