--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 body {
   margin: 0;
+  min-height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,6 +13,13 @@ body {
 
 *{
   margin: 0;
+  padding: 0;
+  /*box-sizing: border-box;*/
+  max-width: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 code {
@@ -21,7 +29,7 @@ code {
 
 #root{
   height: 100%;
-  min-width: 320px;
+  /*min-width: 320px;*/
   max-width: 1280px;
   margin: 0 auto;
 }
